crates/htui/tests/snapshots/backlog__empty_reqs.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ CLEAN-1 ──────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││No requirements cited.                     │
│  ANA-2    open               Orchestrator step grap…││                                           │
│  CLEAN-1  failed             Drop the legacy markdo…││                                           │
│  FEAT-1   in_progress        TUI scaffold           ││                                           │
│  FEAT-2   blocked            Agent driver and chat …││                                           │
│  FEAT-3   queued             Postgres store and cac…││                                           │
│  FIX-1    closed             Terminal left raw afte…││                                           │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││J/K move · r reconfirm · c cite · u uncite │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
