crates/htui/tests/snapshots/backlog__graph_depth_1.snap
---
source: crates/htui/tests/backlog.rs
expression: depth_1
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ FEAT-1 ───────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││▸ FEAT-1 in_progress TUI scaffold          │
│  ANA-2    open               Orchestrator step grap…││  → origin     ANA-1 done Data model, box …│
│  CLEAN-1  failed             Drop the legacy markdo…││    ← origin     FEAT-3 queued (*)         │
│  FEAT-1   in_progress        TUI scaffold           ││  ← blocked_by FEAT-2 blocked Agent driver…│
│  FEAT-2   blocked            Agent driver and chat …││  ← relates    FEAT-3 queued Postgres stor…│
│  FEAT-3   queued             Postgres store and cac…││                                           │
│  FIX-1    closed             Terminal left raw afte…││                                           │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││                                           │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││depth 1/3 · +/- depth · Enter re-root      │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
