crates/htui/tests/snapshots/backlog__graph_re_rooted.snap
---
source: crates/htui/tests/backlog.rs
expression: frame
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ ANA-1 ────────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││▸ ANA-1 done Data model, box registry and …│
│  ANA-2    open               Orchestrator step grap…││  ← blocked_by agy:ANA-1 done Prompt assem…│
│  CLEAN-1  failed             Drop the legacy markdo…││    ← blocked_by agy:FIX-1 open Session le…│
│  FEAT-1   in_progress        TUI scaffold           ││  ← origin     FEAT-1 in_progress TUI scaf…│
│  FEAT-2   blocked            Agent driver and chat …││    ← blocked_by FEAT-2 blocked Agent driv…│
│  FEAT-3   queued             Postgres store and cac…││    ← relates    FEAT-3 queued (*)         │
│  FIX-1    closed             Terminal left raw afte…││  ← origin     FEAT-3 queued Postgres stor…│
│  TOOL-1   awaiting_approval  CI matrix for the thre…││  ← blocked_by TOOL-1 awaiting_approval    │
│▾ agy (3)                                            ││    ← origin     agy:FIX-1 open (*)        │
│  ANA-1    done               Prompt assembly survey ││                                           │
│  FEAT-1   open               ACP transport upgrade  ││                                           │
│  FIX-1    open               Session leak on cancel ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││depth 2/3 · +/- depth · Enter re-root      │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
